# gdf-experimentation

./: inverse.py  mesh.py  model.py  optimizer.py  renderable.py  scene.py  shader.py  sympy_experiment.py  tracer.py  visualizer.py
gradient_update/: qp.py
tracer/: CMakeLists.txt
tracer/src/: adam.cu  adam.hpp  buffer_utils.hpp  cuda_io.hpp  cuda_matmul.hpp  cuda_trilinear.hpp  debug.hpp  derivative_generator.cpp  fmm_generator.cpp  fmm_test.cpp  grid_sdf.hpp  matmul.hpp  optimizer.hpp  optimizer_generator.cpp  optimizer_test.cpp  projection_generator.cpp  read_sdf.hpp  recorder.hpp  sdf_generator.cpp  sobel_generator.cpp  tracer.cpp  tracer.cu  tracer_generator.cpp  utils.hpp
triangle_dist/: .gitignore  Makefile  triangle_distance.c  triangle_distance.cu
